Bug 233455 - [GTK][GTK4] MiniBrowser asserts in isInAcceleratedCompositingMode opening page in debug mode
Summary: [GTK][GTK4] MiniBrowser asserts in isInAcceleratedCompositingMode opening pag...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Carlos Garcia Campos
URL:
Keywords:
Depends on:
Blocks: GTK4
  Show dependency treegraph
 
Reported: 2021-11-23 20:06 PST by Lauro Moura
Modified: 2023-03-30 02:34 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lauro Moura 2021-11-23 20:06:51 PST
Steps to reproduce:

* Build with GTK4 enabled: --cmakeargs="-DUSE_GTK4=On"   
* Run MiniBrowser

It asserts checking for drawingArea->isInAcceleratedCompositingMode().

Looks like the snapshots are being requested before the rendering scheme effectively transitions to AC mode.

Trace:

ASSERTION FAILED: drawingArea->isInAcceleratedCompositingMode()
/app/webkit/Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp(729) : void webkitWebViewBaseSnapshot(GtkWidget*, GtkSnapshot*)
1   0x7f4b7f437c2d WTFCrash
2   0x7f4b82b02f56 std::numeric_limits<unsigned int>::max()
3   0x7f4b83bbb587 /app/webkit/WebKitBuild/Debug/lib/libwebkit2gtk-5.0.so.0(+0x20a9587) [0x7f4b83bbb587]
4   0x7f4b815c874f /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31774f) [0x7f4b815c874f]
5   0x7f4b815cb614 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31a614) [0x7f4b815cb614]
6   0x7f4b815d8003 gtk_widget_snapshot_child
7   0x7f4b814c7af5 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x216af5) [0x7f4b814c7af5]
8   0x7f4b815c874f /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31774f) [0x7f4b815c874f]
9   0x7f4b815cb614 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31a614) [0x7f4b815cb614]
10  0x7f4b815d8003 gtk_widget_snapshot_child
11  0x7f4b815d808e /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x32708e) [0x7f4b815d808e]
12  0x7f4b815c874f /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31774f) [0x7f4b815c874f]
13  0x7f4b815cb614 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31a614) [0x7f4b815cb614]
14  0x7f4b815d8003 gtk_widget_snapshot_child
15  0x7f4b815c874f /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31774f) [0x7f4b815c874f]
16  0x7f4b815cb614 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31a614) [0x7f4b815cb614]
17  0x7f4b815d8003 gtk_widget_snapshot_child
18  0x7f4b815d808e /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x32708e) [0x7f4b815d808e]
19  0x7f4b815c874f /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31774f) [0x7f4b815c874f]
20  0x7f4b815cb614 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31a614) [0x7f4b815cb614]
21  0x7f4b815d8003 gtk_widget_snapshot_child
22  0x7f4b815d808e /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x32708e) [0x7f4b815d808e]
23  0x7f4b815c874f /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31774f) [0x7f4b815c874f]
24  0x7f4b815cb614 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31a614) [0x7f4b815cb614]
25  0x7f4b815d8003 gtk_widget_snapshot_child
26  0x7f4b815d808e /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x32708e) [0x7f4b815d808e]
27  0x7f4b815c8b26 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x317b26) [0x7f4b815c8b26]
28  0x7f4b815cb614 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x31a614) [0x7f4b815cb614]
29  0x7f4b815d79b3 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x3269b3) [0x7f4b815d79b3]
30  0x7f4b815e44e6 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x3334e6) [0x7f4b815e44e6]
31  0x7f4b816d1438 /usr/lib/x86_64-linux-gnu/libgtk-4.so.1(+0x420438) [0x7f4b816d1438]
Mesa: The provided filesystem timestamp for the cache is bogus! Disabling On-disk cache.
Comment 1 Carlos Garcia Campos 2023-03-29 02:52:06 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12104
Comment 2 EWS 2023-03-30 02:34:39 PDT
Committed 262317@main (8203d28d8126): <https://commits.webkit.org/262317@main>

Reviewed commits have been landed. Closing PR #12104 and removing active labels.