Cherry-pick 262317@main (8203d28d8126). https://bugs.webkit.org/show_bug.cgi?id=233455

[GTK][GTK4] MiniBrowser asserts in isInAcceleratedCompositingMode opening page in debug mode
    https://bugs.webkit.org/show_bug.cgi?id=233455

    Reviewed by Žan Doberšek.

    Send EnterAcceleratedCompositingMode as soon as web process enters
    accelerated compositing mode instead of waiting for the first backing
    store update.

    * Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
    (WebKit::DrawingAreaCoordinatedGraphics::enterAcceleratedCompositingMode):

    Canonical link: https://commits.webkit.org/262317@main